name:                mqo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/masatoko/mqo#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          masatokodo@gmail.com
copyright:           2018 Masato Kobayashi
category:            Codec
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.Formats.MQO
                     , Graphics.Formats.MQO.Types
                     , Graphics.Formats.MQO.Import
  build-depends:
      base >= 4.7 && < 5
    , vector
    , bytestring
    , linear
    , parser-combinators
    , megaparsec >= 6.0.0
    , safe
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/masatoko/mqo
